--- a/index.html
+++ b/index.html
@@ -118,5 +118,8 @@
           return cue;
         }
     </script>
+	  
+	 <p>Modified version of the SRT to VTT converter from https://github.com/silviapfeiffer/silviapfeiffer.github.io. The webapp is available at http://www.webvtt.org/.</p>
+	 <p>This also uses the save functionality from https://github.com/eligrey/FileSaver.js</p>
   </body>
 </html>
