--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <label>Filename: <input type="text" class="filename" id="text-filename" placeholder="Type filename" />.vtt</label>
         <button type="button" onclick="saveFile()">Save As</button>
     </div>
-    <p>Modified version of the SRT to VTT converter from <a href="https://github.com/silviapfeiffer/silviapfeiffer.github.io">https://github.com/silviapfeiffer/silviapfeiffer.github.io</a>. The webapp is available at <a href="http://www.webvtt.org/">http://www.webvtt.org/</a>.</p>
-    <p>This also uses the save functionality from <a href="https://github.com/eligrey/FileSaver.js">https://github.com/eligrey/FileSaver.js</a></p>
+    <p class="subtext">Modified version of the SRT to VTT converter from <a href="https://github.com/silviapfeiffer/silviapfeiffer.github.io">https://github.com/silviapfeiffer/silviapfeiffer.github.io</a>. The webapp is available at <a href="http://www.webvtt.org/">http://www.webvtt.org/</a>.</p>
+    <p class="subtext">This also uses the save functionality from <a href="https://github.com/eligrey/FileSaver.js">https://github.com/eligrey/FileSaver.js</a></p>
     </div>
     
     <script>
