--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <label>Filename: <input type="text" class="filename" id="text-filename" placeholder="Type filename" />.vtt</label>
         <button type="button" onclick="saveFile()">Save As</button>
     </div>
+    <p class="subtext"><b>Paulo's Notes:</b></p>
     <p class="subtext">This website is based on the SRT to VTT converter from <a href="https://github.com/silviapfeiffer/silviapfeiffer.github.io">https://github.com/silviapfeiffer/silviapfeiffer.github.io</a>. The webapp is available at <a href="http://www.webvtt.org/">http://www.webvtt.org/</a>.</p>
     <p class="subtext">The main change is the addition of the save functionality which is based on <a href="https://github.com/eligrey/FileSaver.js">https://github.com/eligrey/FileSaver.js</a></p>
     </div>
