--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 
     <link rel="stylesheet" href="./VTT to SRT.css">
     
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-H3LH1WMBNB"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-H3LH1WMBNB');
+	</script>
+	
   </head>
   <body>
     <div class="maincontainer">
