--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="maincontainer">
           <div class="subcontainer">
           <h1>Convert SRT files to WebVTT files</h1>
-          <p>Cut and paste the content of the SRT file into the text entry box. Then, press <b>Convert.</b></p>    
+          <p>Copy and paste the content of the SRT file into the text entry box. Then, press <b>Convert.</b></p>    
          <textarea cols="80" id="srt" name="content" rows="20"></textarea>
           <br>
           <button onclick="convert()">Convert</button>
